			   XPCE ChangeLog
			   ==============

VERSION 6.6.36, distributed with SWI-Prolog 5.6.36
==================================================

* FIXED: Possible 1 point to small boundingbox when writing (scaled)
  postscript.  Bert Bredeweg.

VERSION 6.6.35, distributed with SWI-Prolog 5.6.35
==================================================

* FIXED: Bug#285: image<-postscript.  Dmitry.

* FIXED: editor->newline if the text-buffer is in wide-character mode
  on big-endian machines (Mac PPC).

* FIXED: Bug#281: Error in class tabular.   Bruno Martinez,

* FIXED: Failing double-click detection due to too short datatype.

VERSION 6.6.34, distributed with SWI-Prolog 5.6.34
==================================================

* PORT: Work-around for version problems in Xft libraries.

VERSION 6.6.32, distributed with SWI-Prolog 5.6.32
==================================================

* ADDED: Edit breakpoints and define how they are handled in the debugger.

* ENHANCED: some issues in table-layout.

VERSION 6.6.30, distributed with SWI-Prolog 5.6.30
==================================================

* FIXED: Bug#265: socket(tuple(host, 0).  Sebastian Steenbuck.

* PORT: Prefer pkg-config over xft-config for finding XFT.  Needed on
  Redhat Linux FC6.  With help from Jacco van Ossenbruggen.

VERSION 6.6.29, distributed with SWI-Prolog 5.6.29
==================================================

* FIXED: PceEmacs: variable-marking inside brace-terms.

VERSION 6.6.27, distributed with SWI-Prolog 5.6.27
==================================================

* PORT: More patches for the Win64 port.

VERSION 6.6.26, distributed with SWI-Prolog 5.6.26
==================================================

* PORT: Many changes for Win64 port (running experimentally).

* FIXED: Store/load real objects to/from file for 64-bit platforms.  Various
  other issues with real objects on 64-bit systems.

VERSION 6.6.25, distributed with SWI-Prolog 5.6.25